[KOGITO-8899] Fixing failed tests